Correct link text

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -6,7 +6,7 @@ html
         link(rel="stylesheet", href="/css/style.css")
     body    
         h1 Custom Object Table
-        a(href="/update-cobj") Add a new animal
+        a(href="/update-cobj") Add to this table
         table
             thead
                 tr
